<resources>
    <string name="app_name">SBMS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_firstname">FirstName</string>
    <string name="hint_lastname">LastName</string>
    <string name="hint_department">Department</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_jobPosition">Job Position</string>
    <string name="hint_officePhone">Office Phone</string>
    <string name="hint_description">Short Company Description</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_website">Website</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_client_type">Select client type</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_namec">Enter Company Name</string>
    <string name="err_msg_description">Enter Company Description</string>
    <string name="err_msg_email">Enter valid email address</string>

    <string name="err_msg_password">Enter the password</string>
    <!--Supporting Documents-->
    <string name="application_letter">Application Letter</string>
    <string name="company_profile">Company Profile</string>
    <string name="cert_of_incorporation">Certificate Of Incorporation</string>
    <string name="mou">Memorandum Of Association</string>
    <string name="cr14">CR-14</string>
    <string name="vat_cert">Vat Registration Certificate</string>
    <string name="itf_cert">ITF 263 Tax Clearance Certificate</string>
    <string name="trade_license">Trade License</string>
    <string name="trace_ref">Traceable References</string>
    <string name="other">Other(Specify)</string>
    <string name="inventory_brand">Brand</string>
    <string name="inventory_model">Brand</string>
    <string name="inventory_toner_type">Toner Type</string>
    <string name="inventory_quantity">Quantity</string>
    <string name="inventory_need_maintanance">Need Maintainance(Yes/No)</string>
    <!-- End of Supporting Documents-->

    <!--YesNo Array-->
    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <!--Inventory Category-->
    <string name="hint_description_inventory">Inventory Description</string>
    <string-array name="inventory_categories">
        <item>--Select--</item>
        <item>Computers-Laptops</item>
        <item>Computers-Desktops</item>
        <item>Computers-Servers</item>
        <item>Printers</item>
        <item>Toners</item>
    </string-array>
    <!--Titles-->
    <!--Client Option-->
    <string name="btn_client_profile">Profile</string>
    <string name="btn_client_contacts">Contacts</string>
    <string name="btn_client_inventory">Inventory</string>
    <string name="btn_client_notes">Notes</string>
    <string name="btn_client_quotes">Quotes</string>
    <string name="btn_client_invoice">Invoice</string>
    <string name="btn_client_summary">Call/Visit Summary</string>

    <!--Client Profile>-->
    <string name="client_profile_text_description">Description :</string>
    <string name="client_profile_text_email">Email :</string>
    <string name="client_profile_text_clientType">Client Type :</string>
    <string name="client_profile_text_phone">Phone :</string>

    <string name="client_profile_texts_address">Address :</string>
    <string name="client_profile_text_website">Website :</string>
    <string name="client_profile_btn_procurementDocs">Procurement Supporting Documents</string>

    <!--Branch strings-->
    <string name="hint_client_branch_name">Branch Name</string>
    <string name="hint_client_branch_description">Description</string>
    <string name="hint_client_branch_address">Location</string>
    <string name="title_activity_fragment_add_inventory">FragmentAddInventory</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Main Menu Strings-->
    <string name="main_menu_gallery">Media</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_menu_sync">Sync</string>
    <!--Camera Strings-->
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_open_pictures">Open Pictures</string>
    <string name="btn_start_record">Record/List</string>

    <string name="string_add">Add</string>
    <string name="string_stock_level">Stock Level</string>
    <string name="string_percent">%</string>

    <!--Add Product String String-->
    <string name="string_pro_model">Model</string>
    <string name="string_pro_monthyear">Select Month/Year</string>
    <string name="string_pro_warranty">Warranty</string>
    <string name="string_pro_description">Description</string>
    <string name="string_pro_processor">Select Processor</string>
    <string name="string_pro_memory">Select Memory</string>
    <string name="string_pro_harddrive">Select Harddrive</string>
    <string name="string_pro_display">Display</string>
    <string name="string_pro_supplier">Supplier</string>
    <string name="string_pro_landing">Landing Cost</string>
    <string name="string_pro_quantity">Quantity Delivered</string>
    <string name="string_pro_sellingprice">Selling Price</string>
    <string name="string_pro_reorderlevel">ReOrder Level</string>
    <string name="string_pro_reorderquantity">ReOrder Quantity</string>
    <string name="string_pro_os">Operating System</string>

    <!--Array Month/Year-->
    <string-array name="monthyear">
        <item>Month(s)</item>
        <item>Years(s)</item>
    </string-array>

    <!--Array Processor-->
    <string-array name="processor">
        <item>Dual Core</item>
        <item>Core i3</item>
        <item>Core i5</item>
        <item>Core i7</item>
        <item>Core i9</item>
    </string-array>

    <!--Array Memory-->
    <string-array name="memory">
        <item>2 GB</item>
        <item>4 GB</item>
        <item>8 GB</item>
        <item>12 GB</item>
        <item>16 GB</item>
        <item>32 GB</item>
        <item>52 GB</item>
        <item>64 GB</item>
    </string-array>

    <!--Array Memory-->
    <string-array name="harddrive">
        <item>50 GB</item>
        <item>100 GB</item>
        <item>250 GB</item>
        <item>300 GB</item>
        <item>500 GB</item>
        <item>1 TB</item>
        <item>2 TB</item>

    </string-array>
    <!--Array OS-->
    <string-array name="os">
        <item>Windows OS</item>
        <item>Linux OS</item>
        <item>IOS</item>
    </string-array>

    <string name="err_msg_model">Model Required</string>
    <string name="err_msg_requiredfield">Field Required.</string>
    <string name="err_msg_quantityD">Quantity Delivered Required</string>
    <string name="err_msg_sellingPrice">Quantity Delivered Required</string>

    <string name="string_client_management">Client Management</string>
    <string name="string_client_management_decr">Manage Your Clients Here.</string>
    <string name="string_visit_plans">Visit Plans</string>
    <string name="string_visit_plans_descr">Plan/View Your Visits Here.</string>
    <string name="string_quotes">Quotes</string>
    <string name="string_quotes_descr">Send/Create Quotes Here.</string>
    <string name="string_invoices">Invoices</string>
    <string name="string_invoices_descr">Generate/Send Invoices Here.</string>
    <string name="string_inventory">Inventory</string>
    <string name="string_inventory_descr">Manage Inventory/Stock Here.</string>

    <string name="quote_active_rate_string">Active Rate</string>
    <string name="string_separator">|</string>
    <string name="quote_change_string">Change Rate</string>
    <string name="quote_client_string">Select Client</string>
    <string name="quote_contact_string">Select Contact</string>
    <string name="quote_bank_string">Select Bank</string>
    <string name="title_activity_add_quote_items">Add Items</string>

    <string name="quote_item">ITEM(S)</string>
    <string name="quote_date">DATE</string>
    <string name="quote_subtotal">SUB TOTAL</string>
    <string name="quote_vat">VAT</string>
    <string name="quote_total">TOTAL</string>
    <string name="title_activity_select_quote_items">SelectQuoteItemsActivity</string>
    <string name="product_up">Unit Price</string>
    <string name="product_lp">Line Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="quote_new">Create New Quote</string>
    <string name="quote_list">List Quotes</string>

    <string name="title_activity_list_quotes">Quotes</string>


</resources>
