<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.totalit.sbms.HomeActivity">

    <item

        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/main_menu_sync"

        />
    <item

        android:id="@+id/action_gallery"
        android:orderInCategory="100"
        android:title="@string/main_menu_gallery"
        android:icon="@drawable/ic_perm_media_black_24dp"
        />
    <item
        android:icon="@drawable/ic_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_off"
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/main_menu_logout"
        app:showAsAction="never" />

</menu>
